@@ -1,4 +1,4 @@
-# Copyright (C) 1998-2005 by the Free Software Foundation, Inc.
+# Copyright (C) 1998-2008 by the Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -199,13 +199,14 @@ def process(mlist, msg, msgdata):
     requestaddr = mlist.GetRequestEmail()
     subfieldfmt = '<%s>, <mailto:%s?subject=%ssubscribe>'
     listinfo = mlist.GetScriptURL('listinfo', absolute=1)
+    useropts = mlist.GetScriptURL('options', absolute=1)
     headers = {}
     if msgdata.get('reduced_list_headers'):
         headers['X-List-Administrivia'] = 'yes'
     else:
         headers.update({
             'List-Help'       : '<mailto:%s?subject=help>' % requestaddr,
-            'List-Unsubscribe': subfieldfmt % (listinfo, requestaddr, 'un'),
+            'List-Unsubscribe': subfieldfmt % (useropts, requestaddr, 'un'),
             'List-Subscribe'  : subfieldfmt % (listinfo, requestaddr, ''),
             })
         # List-Post: is controlled by a separate attribute
